--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/setup-python@v2
         with: 
           python-version: 3.10.1
-      - run: python -m unittest
+      - run: python -m unittest very_simple_test.py
       - run: python very_simple.py
 
