--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: ci-python
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - dev
 jobs: 
   check-application:
     runs-on: ubuntu-latest
