--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches:
       - dev
+
+strategy:
+  matrix:
+    python: ['3.8', '3.9', '3.10.1']
+
 jobs: 
   check-application:
     runs-on: ubuntu-latest
@@ -11,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with: 
-          python-version: 3.10.1
+          python-version: ${{ matrix.python }}
       - run: python -m unittest very_simple_test.py
       - run: python very_simple.py
 
